--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .navbar_c{
     background: #5ccce2;
+    /* position: fixed; */
 }
 
 div.mast{
@@ -12,6 +13,10 @@ svg{
     width: 25px; height: 25px;
 }
 
+/* .my-container{
+    display: flex;
+    flex-wrap: wrap;
+} */
 
 .stb{
   margin: 5px;
